--- a/MyFirstHTML.html
+++ b/MyFirstHTML.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<html>
+<html lang="zh_CN">
+
 
 <head>
-    <title>Zhaoer</title>
+    <title style="color:red;">Zhaoer</title>
     <script>
         //显示时间
         function displayDate() {
