--- a/MyFirstHTML.html
+++ b/MyFirstHTML.html
@@ -173,9 +173,17 @@
     <button class="button button1">Green</button>
     <button class="button button2">Blue</button>
 
-    <a href="https://bing.com">
-        <button>点击跳转至bing</button></a>
 
+    <hr>
+    <p>学习制作一个这样的网页!</p>
+    <a href="https://www.bing.com/search?q=HTML&form=QBLH&sp=-1&pq=html&sc=10-4&qs=n&sk=&cvid=614C6559A36E4A7A86DCB81520C01C87&ghsh=0&ghacc=0&ghpl=">
+        <button>前往bing寻找</button></a>
+    <br>
+    <a href=" https://www.w3schools.com ">
+        <button> 去往W3Schools</button> </a>
+    <br>
+    <a href="https://www.runoob.com/ ">
+        <button>去往菜鸟教程</button> </a>
 </body>
 
 </html>
