--- a/WebSite.html
+++ b/WebSite.html
@@ -164,10 +164,10 @@
     <!--网页末端-->
     <hr>
     <p>查看我的别的作品!</p>
-    <a href="圣诞树.html">
+    <a href="Christmas-tree.html">
         <button>圣诞树</button>
     </a>
-    <a href="爱心动态源码.html">
+    <a href="dynamic.html">
         <button>动态爱心</button>
     </a>
     <a href="">
