Add an embedded web page

--- a/WebSite.html
+++ b/WebSite.html
@@ -183,17 +183,25 @@
         <button> 去往W3Schools</button>
     </a>
     <br>
+    <iframe src="https://www.w3schools.com" title="W3Schools Free Online Web Tutorials">
+    </iframe>
+    <br>
     <a href="https://www.runoob.com/ ">
         <button>去往菜鸟教程</button>
     </a>
     <hr>
-    <address>
-        Written by <a href="malito:gene_ives_herry@outlook.com">Gene Ives Herry</a>.<br>or by <a href="malito:gene_ives_herry@proton.me">Gene Ives Herry</a>.<br>or by <a href="malito:slap-me@qq.com">Slap-me</a>.<br> 
-        Visit us at:Earth China<br>
-        Outlook.com<br>
-        proton.me<br>
-        qq.com
-        </address>
+    <details>
+        <summary>Contact the author</summary>
+        <address>
+            Written by <a href="malito:gene_ives_herry@outlook.com">Gene Ives Herry</a>.<br>or by <a href="malito:gene_ives_herry@proton.me">Gene Ives Herry</a>.<br>or by <a href="malito:slap-me@qq.com">Slap-me</a>.<br> 
+            Visit us at:Earth China<br>
+            Outlook.com<br>
+            proton.me<br>
+            qq.com
+            </address>
+    </details>
+
+
     <hr>
     <div style="margin:0 auto; text-align:center">
         <div style="font-size:48px; color: blue;" id="date">
