Add "Contact Author"

--- a/WebSite.html
+++ b/WebSite.html
@@ -191,10 +191,10 @@
     </a>
     <hr>
     <details>
-        <summary>Contact the author</summary>
+        <summary>联系作者</summary>
         <address>
-            Written by <a href="malito:gene_ives_herry@outlook.com">Gene Ives Herry</a>.<br>or by <a href="malito:gene_ives_herry@proton.me">Gene Ives Herry</a>.<br>or by <a href="malito:slap-me@qq.com">Slap-me</a>.<br> 
-            Visit us at:Earth China<br>
+            制作人邮箱 <a href="malito:gene_ives_herry@outlook.com">Gene Ives Herry</a>.<br>或 <a href="malito:gene_ives_herry@proton.me">Gene Ives Herry</a>.<br>或 <a href="malito:slap-me@qq.com">Slap-me</a>.<br> 
+            在这里找到我们 : 地球-中国<br>
             Outlook.com<br>
             proton.me<br>
             qq.com
