Optimization logic error

--- a/WebSite.html
+++ b/WebSite.html
@@ -174,9 +174,8 @@
         <label for="cars">查看我的别的作品!</label>
         <br> <select name="cars" id="website">
             <optgroup label="我收集的">
-                <option href = "Christmas-tree.html">Christmas-tree</option>
-                <option href = "dynamic.html">dynamic</option>
-                <option href = "Mouse-behavior-feedback.html">Mouse-behavior-feedback</option>
+                <option href = "Christmas-tree.html">Christmas-tree(圣诞树)</option>
+                <option href = "dynamic.html">dynamic(动态爱心)</option>
             </optgroup>
             <optgroup label="我原创的">
                 <option href = "WebSite.html">此网页就是我原创的!</option>
