--- a/WebSite.html
+++ b/WebSite.html
@@ -8,7 +8,7 @@
 <head>
     <main>
         <title style="color:red;">Zhaoer</title>
-
+        <!--可视化鼠标行为主CSS-->
         <style>
             .button {
                 border: none;
@@ -45,7 +45,7 @@
                 color: white;
             }
         </style>
-        <!--网站鼠标行为主框架-->
+        <!--鼠标行为主CSS-->
         <style>
             #container {
                 width: 570px;
@@ -72,6 +72,108 @@
                 background-color: lightblue;
             }
         </style>
+        <!--网页尾端时间JS-->
+        <script>
+            var bfullscreen = false;
+
+            function fullscreen() {
+                //document.documentElement.webkitRequestFullScreen();
+                //var docElm = document.documentElement;
+                //console.log(docElm)
+                if (!bfullscreen) {
+                    if (document.requestFullscreen) { // w3c
+                        document.requestFullscreen();
+                    } else if (document.mozRequestFullScreen) { // FireFox
+                        document.mozRequestFullScreen();
+                    } else if (document.webkitRequestFullScreen) { // chrome
+                        document.webkitRequestFullScreen();
+                    } else if (document.msRequestFullscreen) { // IE11
+                        document.msRequestFullscreen();
+                    }
+                    bfullscreen = true;
+                } else {
+                    if (document.exitFullscreen) {
+                        document.exitFullscreen();
+                    } else if (document.mozCancelFullScreen) {
+                        document.mozCancelFullScreen();
+                    } else if (document.webkitCancelFullScreen) {
+                        document.webkitCancelFullScreen();
+                    } else if (document.msExitFullscreen) {
+                        document.msExitFullscreen();
+                    }
+                    bfullscreen = false;
+                }
+            }
+
+            function fontsizereset() {
+                var ed = document.getElementById("date");
+                var et = document.getElementById("time");
+                ed.style.fontSize = "48px";
+                et.style.fontSize = "160px";
+            }
+
+            function fontsizeup() {
+                var ed = document.getElementById("date");
+                var et = document.getElementById("time");
+                var vd = ed.style.fontSize;
+                var vt = et.style.fontSize;
+                vd = parseInt(vd.substring(0, vd.length - 2)) + 16;
+                vt = parseInt(vt.substring(0, vt.length - 2)) + 24;
+                if (vd > 240)
+                    vd = 240;
+                if (vt > 360)
+                    vt = 360;
+                ed.style.fontSize = vd + "px";
+                et.style.fontSize = vt + "px";
+            }
+
+            function fontsizedown() {
+                var ed = document.getElementById("date");
+                var et = document.getElementById("time");
+                var vd = ed.style.fontSize;
+                var vt = et.style.fontSize;
+                vd = parseInt(vd.substring(0, vd.length - 2)) - 20;
+                vt = parseInt(vt.substring(0, vt.length - 2)) - 20;
+                if (vd < 12)
+                    vd = 12;
+                if (vt < 16)
+                    vt = 16;
+                ed.style.fontSize = vd + "px";
+                et.style.fontSize = vt + "px";
+            }
+
+            // -------------------------------
+            function updateDate(y, m, d) {
+                if (m < 10)
+                    m = "0" + m;
+                if (d < 10)
+                    d = "0" + d;
+                document.getElementById("year").innerHTML = y;
+                document.getElementById("month").innerHTML = m;
+                document.getElementById("day").innerHTML = d;
+            }
+
+            function updateTime(h, m, s, sss) {
+                if (h < 10)
+                    h = "0" + h;
+                if (m < 10)
+                    m = "0" + m;
+                if (s < 10)
+                    s = "0" + s;
+                document.getElementById("h").innerHTML = h;
+                document.getElementById("m").innerHTML = m;
+                document.getElementById("s").innerHTML = s;
+                document.getElementById("sss").innerHTML = sss;
+            }
+
+            function update() {
+                var date = new Date();
+                updateDate(date.getFullYear(), date.getMonth() + 1, date.getDate());
+                updateTime(date.getHours(), date.getMinutes(), date.getSeconds(), parseInt(date.getMilliseconds() / 100));
+
+            };
+            setInterval("update()", 100); // 用延时的话间隔1s多1ms
+        </script>
 
 </head>
 
@@ -216,115 +318,14 @@
     <hr>
     <p>现在几点了!</p>
     <div style="margin:0 auto; text-align:center">
-        <div style="font-size:48px; color: blue;" id="date">
+        <div style="font-size:48px; color: rgb(105, 238, 243);" id="date">
             <span id="year">2017</span>-<span id="month">01</span>-<span id="day">01</span>
         </div>
 
-        <div style="font-size:140px; color: blue;" id="time">
+        <div style="font-size:140px; color: rgb(255, 197, 130);" id="time">
             <span id="h">12</span>:<span id="m">00</span>:<span id="s">00</span>.<span id="sss">000</span>
         </div>
     </div>
-    <script>
-        var bfullscreen = false;
-
-        function fullscreen() {
-            //document.documentElement.webkitRequestFullScreen();
-            //var docElm = document.documentElement;
-            //console.log(docElm)
-            if (!bfullscreen) {
-                if (document.requestFullscreen) { // w3c
-                    document.requestFullscreen();
-                } else if (document.mozRequestFullScreen) { // FireFox
-                    document.mozRequestFullScreen();
-                } else if (document.webkitRequestFullScreen) { // chrome
-                    document.webkitRequestFullScreen();
-                } else if (document.msRequestFullscreen) { // IE11
-                    document.msRequestFullscreen();
-                }
-                bfullscreen = true;
-            } else {
-                if (document.exitFullscreen) {
-                    document.exitFullscreen();
-                } else if (document.mozCancelFullScreen) {
-                    document.mozCancelFullScreen();
-                } else if (document.webkitCancelFullScreen) {
-                    document.webkitCancelFullScreen();
-                } else if (document.msExitFullscreen) {
-                    document.msExitFullscreen();
-                }
-                bfullscreen = false;
-            }
-        }
-
-        function fontsizereset() {
-            var ed = document.getElementById("date");
-            var et = document.getElementById("time");
-            ed.style.fontSize = "48px";
-            et.style.fontSize = "160px";
-        }
-
-        function fontsizeup() {
-            var ed = document.getElementById("date");
-            var et = document.getElementById("time");
-            var vd = ed.style.fontSize;
-            var vt = et.style.fontSize;
-            vd = parseInt(vd.substring(0, vd.length - 2)) + 16;
-            vt = parseInt(vt.substring(0, vt.length - 2)) + 24;
-            if (vd > 240)
-                vd = 240;
-            if (vt > 360)
-                vt = 360;
-            ed.style.fontSize = vd + "px";
-            et.style.fontSize = vt + "px";
-        }
-
-        function fontsizedown() {
-            var ed = document.getElementById("date");
-            var et = document.getElementById("time");
-            var vd = ed.style.fontSize;
-            var vt = et.style.fontSize;
-            vd = parseInt(vd.substring(0, vd.length - 2)) - 20;
-            vt = parseInt(vt.substring(0, vt.length - 2)) - 20;
-            if (vd < 12)
-                vd = 12;
-            if (vt < 16)
-                vt = 16;
-            ed.style.fontSize = vd + "px";
-            et.style.fontSize = vt + "px";
-        }
-
-        // -------------------------------
-        function updateDate(y, m, d) {
-            if (m < 10)
-                m = "0" + m;
-            if (d < 10)
-                d = "0" + d;
-            document.getElementById("year").innerHTML = y;
-            document.getElementById("month").innerHTML = m;
-            document.getElementById("day").innerHTML = d;
-        }
-
-        function updateTime(h, m, s, sss) {
-            if (h < 10)
-                h = "0" + h;
-            if (m < 10)
-                m = "0" + m;
-            if (s < 10)
-                s = "0" + s;
-            document.getElementById("h").innerHTML = h;
-            document.getElementById("m").innerHTML = m;
-            document.getElementById("s").innerHTML = s;
-            document.getElementById("sss").innerHTML = sss;
-        }
-
-        function update() {
-            var date = new Date();
-            updateDate(date.getFullYear(), date.getMonth() + 1, date.getDate());
-            updateTime(date.getHours(), date.getMinutes(), date.getSeconds(), parseInt(date.getMilliseconds() / 100));
-
-        };
-        setInterval("update()", 100); // 用延时的话间隔1s多1ms
-    </script>
 
 </body>
 
